# dataBases

lab1/: KV-03_Dunets_DB1.docx
lab2/: CMakeLists.txt  KV-03_Dunets_DB2.docx  controller.h  db_backend.h  main.cpp  model.h  view.h
lab3/: KV-03_Dunets_DB3.docx
